--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <div class="hero"> 
+    <h2>Talat Edmeer</h2>
     <img src="./assets/img/me.png" class="float-center" alt="About"/>
   </div>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -24,17 +25,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Talat Edmeer</a>
+      <a class="navbar-brand" href="#">HOME</a>
     </div>
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="#section1">About Me</a></li>
-          <li><a href="#section2">Skills</a></li>
-          <li><a href="#section3">Portfolio</a></li>
-          <li><a href="#section4">Blog</a></li>
-          <li><a href="#section5">Contact</a></li>
-          <li><a href="#" class="btn">Resume</a></li>
+          <li><a href="#section1">ABOUT ME</a></li>
+          <li><a href="#section2">SKILLS</a></li>
+          <li><a href="#section3">PORTFOLIO</a></li>
+          <li><a href="#section4">BLOG</a></li>
+          <li><a href="#section5">CONTACT</a></li>
+          <li><a href="#" class="btn">RESUME</a></li>
         </ul>
       </div>
     </div>
