--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <!----CSS link----->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -14,7 +15,7 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <div class="hero"> 
-    <h2>Talat Edmeer</h2>
+    <h2>Talat Edmeer </h2>
     <img src="./assets/img/me.png" class="float-center" alt="About"/>
   </div>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -25,16 +26,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">HOME</a>
+      
     </div>
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="#section1">ABOUT ME</a></li>
-          <li><a href="#section2">SKILLS</a></li>
-          <li><a href="#section3">PORTFOLIO</a></li>
-          <li><a href="#section4">BLOG</a></li>
-          <li><a href="#section5">CONTACT</a></li>
+          <li><a i class ="fa fa-home" href="#"> HOME</i></a></li>
+          <li><a i class ="fa fa-windows" href="#section1"> ABOUT ME</i></a></li>
+          <li><a i class ="fa fa-cloud" href="#section2"> SKILLS</i></a></li>
+          <li><a i class ="fa fa-file" href="#section3"> PORTFOLIO</i></a></li>
+          <li><a i class ="fa fa-html5" href="#section4"> BLOG</i></a></li>
+          <li><a i class ="fa fa-id-card" href="#section5"> CONTACT</i></a></li>
           <li><a href="#" class="btn">RESUME</a></li>
         </ul>
       </div>
@@ -43,7 +45,7 @@
 </nav>    
 
 <div id="section1" class="container-fluid">
-  <h1>About Me</h1>
+  <h1><i class="fa fa-windows"></i>About Me</h1>
   <p>I am a well-organized, dedicated, and eager to learn.
     I get across to people and adjust to changes with ease.
     
@@ -53,11 +55,11 @@
   <p>Currently, I am looking for new career opportunities which my current job position cannot provide.</p>
 </div>
 <div id="section2" class="container-fluid">
-  <h1>Skills</h1>
+  <h1><i class="fa fa-cloud"></i>Skills</h1>
   <p>HTML</br>CSS</br>JavaScript</br>Bootstrap</br>GitHUB</br>JQuery</p>
 </div>
 <div id="section3" class="container-fluid">
-  <h1>Portfolio</h1>
+  <h1><i class="fa fa-file"></i>Portfolio</h1>
   <p>Portfolio Empowering people and their business through
     technology. </p> 
     <p> Creating engaging, purposeful and
@@ -71,7 +73,7 @@
   </p>
 </div>
 <div id="section4" class="container-fluid">
-  <h1>Blog</h1>
+  <h1><i class="fa fa-html5"></i>Blog</h1>
   <p>This time last year I was pursuing a career in Cloud
     Computing but unfortunately due to complications this
     failed and I am now pursuing a career as a Web
@@ -79,11 +81,11 @@
     enchance my online presence and empowering teams.</p>
 </div>
 <div id="section5" class="container-fluid">
-  <h1>Contact</h1>
-  <p>E-mail: Talat@gmail.com </p>
-  <p> Mobile: 0101 29292929 </p>
-  <p> GitHUB: @Talat </p>
-  <p> Twitter: @tal99 </p>
+  <h1><i class="fa fa-envelope-open" aria-hidden="true"></i>Contact</h1>
+  <p> <i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i> E-mail: Talat@gmail.com</i> </p>
+  <p> <i class="fa fa-whatsapp" aria-hidden="true"></i> Mobile: 0101 29292929 </p>
+  <p> <i class="fa fa-github-square" aria-hidden="true"></i> GitHUB: @Talat </p>
+  <p> <i class="fa fa-twitter" aria-hidden="true"></i> Twitter: @tal99 </p>
 </div>
 </div>
         <footer>
